embed static files
